--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18",
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "^8",
