--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier . --write"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.525.0",
     "next": "14.2.30",
     "next-themes": "^0.4.6",
+    "prettier": "^3.6.2",
     "react": "^18",
     "react-day-picker": "^9.8.0",
     "react-dom": "^18",
