--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "next": "14.2.30",
     "next-themes": "^0.4.6",
