--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-day-picker": "^9.8.0",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
