--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.12",
+    "react-spinners": "^0.17.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
